{
    "name": "ControlScheme",
    "maps": [
        {
            "name": "CameraControl",
            "id": "b48b67b8-0bfe-4540-8a65-b50cd1bf20a6",
            "actions": [
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "30f6bb35-1691-4798-9e92-c85823c455b8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "6baf584d-a54f-4840-b4d8-12b42eba6581",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "964c18cb-0b95-41d5-9bba-af19704b7792",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "369e9050-7004-439f-93cd-2a95335e4db4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "185d162a-7843-45ae-96a6-2b50a3c8febc",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a5d2792-8215-4644-b7be-e2c743d1b820",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Default",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6310aaec-4061-4b82-8180-606c3dfc7d4d",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Default",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3cf13fc4-9391-41d5-b60a-ab79f0166576",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Default",
            "bindingGroup": "Default",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}